mutants.out/log/crates__ax-core__src__value.rs_line_70_col_9.log

*** crates/ax-core/src/value.rs:70:9: replace Value::total_cmp -> Ordering with Default::default()

*** mutation diff:
--- crates/ax-core/src/value.rs
+++ replace Value::total_cmp -> Ordering with Default::default()
@@ -62,32 +62,17 @@
     }
 }
 
 /// A total order over values, so detector output (and thus the envelope) is
 /// deterministic regardless of input ordering. Cross-variant ties break on a
 /// fixed variant rank; floats use [`f64::total_cmp`] so NaN has a defined seat.
 impl Value {
     pub fn total_cmp(&self, other: &Value) -> Ordering {
-        fn rank(v: &Value) -> u8 {
-            match v {
-                Value::Null => 0,
-                Value::Bool(_) => 1,
-                Value::Int(_) => 2,
-                Value::Float(_) => 3,
-                Value::Str(_) => 4,
-            }
-        }
-        match (self, other) {
-            (Value::Bool(a), Value::Bool(b)) => a.cmp(b),
-            (Value::Int(a), Value::Int(b)) => a.cmp(b),
-            (Value::Float(a), Value::Float(b)) => a.total_cmp(b),
-            (Value::Str(a), Value::Str(b)) => a.cmp(b),
-            _ => rank(self).cmp(&rank(other)),
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 /// The inferred logical type of a column.
 #[derive(Debug, Clone, Copy, PartialEq, Eq, Serialize, Deserialize)]
 #[serde(rename_all = "lowercase")]
 pub enum ColType {
     /// No non-null value has been observed yet.


*** /home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=ax-core@0.1.0
       Fresh libc v0.2.186
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.24
       Fresh autocfg v1.5.1
       Fresh bitflags v2.11.1
       Fresh linux-raw-sys v0.12.1
       Fresh fastrand v2.4.1
       Fresh once_cell v1.21.4
       Fresh wait-timeout v0.2.1
       Fresh memchr v2.8.1
       Fresh bit-vec v0.8.0
       Fresh itoa v1.0.18
       Fresh fnv v1.0.7
       Fresh quick-error v1.2.3
       Fresh unarray v0.1.4
       Fresh regex-syntax v0.8.10
       Fresh proc-macro2 v1.0.106
       Fresh getrandom v0.3.4
       Fresh serde_core v1.0.228
       Fresh zerocopy v0.8.50
       Fresh bit-set v0.8.0
       Fresh quote v1.0.45
       Fresh rand_core v0.9.5
       Fresh rustix v1.1.4
       Fresh getrandom v0.4.2
       Fresh ppv-lite86 v0.2.21
       Fresh zmij v1.0.21
       Fresh syn v2.0.117
       Fresh tempfile v3.27.0
       Fresh serde_json v1.0.150
       Fresh rand v0.9.4
       Fresh rand_chacha v0.9.0
       Fresh num-traits v0.2.19
       Fresh rand_xorshift v0.4.0
       Fresh thiserror-impl v2.0.18
       Fresh serde_derive v1.0.228
       Fresh rusty-fork v0.3.1
       Fresh serde v1.0.228
       Fresh thiserror v2.0.18
       Fresh proptest v1.11.0
       Dirty ax-core v0.1.0 (/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/crates/ax-core): the file `crates/ax-core/src/value.rs` has changed (1780155806.795510762s, 316022305ns after last build at 1780155806.479488457s)
   Compiling ax-core v0.1.0 (/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/crates/ax-core)
     Running `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name ax_core --edition=2021 crates/ax-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3cdd1824e2a37b8c -C extra-filename=-5ab5d1a675507000 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps --extern proptest=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libproptest-66f5263f594b7cee.rlib --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde-0e044a46a977e748.rlib --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde_json-7a9eb2fcd78de1ef.rlib --extern thiserror=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libthiserror-ade23de5d46b64b8.rlib`
     Running `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name ax_core --edition=2021 crates/ax-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=0c8fda170aa9664e -C extra-filename=-152e3833fb2b7c67 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde-0e044a46a977e748.rmeta --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde_json-7a9eb2fcd78de1ef.rmeta --extern thiserror=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libthiserror-ade23de5d46b64b8.rmeta`
error[E0277]: the trait bound `std::cmp::Ordering: Default` is not satisfied
  --> crates/ax-core/src/value.rs:70:9
   |
70 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `std::cmp::Ordering`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `ax-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name ax_core --edition=2021 crates/ax-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=0c8fda170aa9664e -C extra-filename=-152e3833fb2b7c67 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde-0e044a46a977e748.rmeta --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde_json-7a9eb2fcd78de1ef.rmeta --extern thiserror=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libthiserror-ade23de5d46b64b8.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `ax-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/ops/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name ax_core --edition=2021 crates/ax-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3cdd1824e2a37b8c -C extra-filename=-5ab5d1a675507000 --out-dir /tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps -C incremental=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/incremental -L dependency=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps --extern proptest=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libproptest-66f5263f594b7cee.rlib --extern serde=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde-0e044a46a977e748.rlib --extern serde_json=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libserde_json-7a9eb2fcd78de1ef.rlib --extern thiserror=/tmp/claude-1000/cargo-mutants-anomalyx-dFShKK.tmp/target/debug/deps/libthiserror-ade23de5d46b64b8.rlib` (exit status: 1)

*** result: Failure(101)
